# QL

./: .gitignore  CONTEXT.md  README.md  app.py  llm_engine.py  model_manager.py  requirements.txt  start.bat  start.sh
android-app/: README.md  gradle.properties  settings.gradle.kts  setup-llama.sh
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
android-app/app/src/main/java/com/ql/chat/: ChatViewModel.kt  LlamaEngine.kt  MainActivity.kt  ModelManager.kt
android-app/app/src/main/java/com/ql/chat/ui/: ChatScreen.kt  MessageBubble.kt
android-app/app/src/main/java/com/ql/chat/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-app/app/src/test/java/com/ql/chat/: ChatViewModelTest.kt  ModelManagerTest.kt
docs/compose/plans/: 2026-07-05-android-chatbot.md
docs/compose/reports/: android-chatbot.md
